Bug 405928 - Loss of inserted data in transaction planner
Summary: Loss of inserted data in transaction planner
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.0.1
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-03-27 13:19 UTC by Mariano
Modified: 2019-04-07 12:54 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mariano 2019-03-27 13:19:37 UTC
SUMMARY

I'm using the Italian interface, some words might be inconsistent. 

STEPS TO REPRODUCE
1. Go to planned transactions and click "new planned transaction";
2. Fill the forms with your data;
3. If I click OK and there is any error, the window is closed and my filled forms are lost. 

OBSERVED RESULT
The error was presented, for istance, when I choose the liquidity account and an incompatible payment method, like manual deposit. 
The error message states "Invalid payment type for bills". 

EXPECTED RESULT
The window should not be closed when an error message is present, allowing me to address the problems. 

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Thomas Baumgart 2019-04-07 12:54:36 UTC
Git commit 37ee0de894992f6d4d77a4a40ed0903b99bfeea9 by Thomas Baumgart.
Committed on 07/04/2019 at 12:53.
Pushed by tbaumgart into branch '5.0'.

Do not throw away schedule data in case of error

Keep data and re-edit schedule in case the schedule cannot be added to
the database.
FIXED-IN: 5.0.4

M  +9    -6    kmymoney/dialogs/keditscheduledlg.cpp

https://commits.kde.org/kmymoney/37ee0de894992f6d4d77a4a40ed0903b99bfeea9