Do not throw away schedule data in case of error

Keep data and re-edit schedule in case the schedule cannot be added to
the database.

BUG: 405928
FIXED-IN: 5.0.4